<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/snake"
        android:layout_width="138dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="110dp"
        android:layout_below="@id/uploadimage"
        android:background="@drawable/button3"
        android:text="@string/snake_information"
        android:textColor="#F8F8F8"
        android:layout_marginStart="12dp" />

    <Button
        android:id="@+id/take_picture"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="clip_horizontal|center"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="85dp"
        android:layout_above="@id/uploadimage"
        android:background="@drawable/button3"
        android:text="@string/take_picture"
        android:textColor="#F8F8F8"
        android:layout_marginStart="12dp" />
    <!--ImageView on which image will be set-->
    <Button
        android:id="@+id/uploadimage"
        android:layout_width="138dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_below="@id/snake"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/button3"
        android:text="@string/upload_image"
        android:textColor="#F8F8F8"
        android:layout_marginStart="12dp" />

    <Button
        android:id="@+id/fasb"
        android:layout_width="138dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="205dp"
        android:layout_below="@id/take_picture"
        android:background="@drawable/button3"
        android:text="@string/first_aid_treatment"
        android:textColor="#F8F8F8"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#F8F8F8"
        android:textSize="43sp"
        app:fontFamily="@font/chelsea_market" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>