<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.maker.SnakeSnap.SnakeInfo">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bar3"
        android:padding="@dimen/padding_regular"
        android:text="@string/article_title"
        android:textAppearance=
            "@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading"
        android:background="@drawable/background3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="300dp"
                android:layout_height="201dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/rp" />

            <TextView
                android:id="@+id/article1"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:autoLink="web"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/article1"
                android:background="#90FFFFFF"/>

            <ImageView
                android:id="@+id/image2"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/mp" />

            <TextView
                android:id="@+id/article2"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/article2"
                android:background="#90FFFFFF"/>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>